Add statistic and Livedata observable to the application

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,12 @@
         android:layout_height="wrap_content"
         android:text="Get next 5 days" />
 
+    <ProgressBar
+        android:id="@+id/progress"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/standard_deviation"
         android:layout_width="match_parent"
